--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Flightpath Ecology</h1>
 <h2>Expertise in acoustic wildlife tracking</h2>
 
-<p>Now visible on flightpath.dk</p>
+<p>Site currently undergoing maintenece</p>
